--- a/WWDC15/Sections.storyboard
+++ b/WWDC15/Sections.storyboard
@@ -57,20 +57,54 @@
             </objects>
             <point key="canvasLocation" x="1141" y="357"/>
         </scene>
-        <!--View Controller-->
+        <!--Apps View Controller-->
         <scene sceneID="Gyg-3I-aYP">
             <objects>
-                <viewController storyboardIdentifier="Apps" id="D6g-n8-0K2" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Apps" id="D6g-n8-0K2" customClass="AppsViewController" customModule="WWDC15" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="bzJ-q2-PXU"/>
                         <viewControllerLayoutGuide type="bottom" id="dUX-D5-ant"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Rfz-aC-XYT">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="macbook.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="R8R-rj-yGd">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xp7-Eg-KfM">
+                                <rect key="frame" x="16" y="20" width="300" height="310"/>
+                                <string key="text">As of today, there are two Apps in the App Store I developed: The first, an app that shows the substiton plan of my school, was originally released in 2013. Three month ago, I decided to rewrite it from the ground up in Swift with a server-side backend in PHP so I can deliver real-time push-notificaitons to to the users. The App is currently "waiting for review" in iTunes Connect.
+The second one is a collaboration between an photo studio and me, it's an iPad app that teaches you different yoga-practices. They recored hours of video and I programmed the app.</string>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="iphone.png" translatesAutoresizingMaskIntoConstraints="NO" id="8So-j5-SFc">
+                                <rect key="frame" x="657" y="124" width="273" height="558"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="apple-watch.png" translatesAutoresizingMaskIntoConstraints="NO" id="vyk-oo-SFf">
+                                <rect key="frame" x="518" y="390" width="240" height="292"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ign-J7-Fmb">
+                                <rect key="frame" x="28" y="338" width="76" height="76"/>
+                                <state key="normal" backgroundImage="subs-icon.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="appSelectValueChanged:" destination="D6g-n8-0K2" eventType="touchUpInside" id="yWE-Ah-qMn"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgL-Mb-oDc">
+                                <rect key="frame" x="162" y="338" width="76" height="76"/>
+                                <state key="normal" backgroundImage="eYoga-icon.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="appSelectValueChanged:" destination="D6g-n8-0K2" eventType="touchUpInside" id="uWW-QM-F28"/>
+                                </connections>
+                            </button>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ipad.png" translatesAutoresizingMaskIntoConstraints="NO" id="eEa-wj-9hg">
+                                <rect key="frame" x="287" y="82" width="761" height="604"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -81,13 +115,27 @@
                             <constraint firstAttribute="bottom" secondItem="R8R-rj-yGd" secondAttribute="bottom" id="oMy-1u-jWB"/>
                         </constraints>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
+                    <connections>
+                        <outlet property="appleWatchImageView" destination="vyk-oo-SFf" id="oFA-GZ-WR1"/>
+                        <outlet property="eyogaButton" destination="dgL-Mb-oDc" id="ZiD-cw-3mL"/>
+                        <outlet property="ipadImageView" destination="eEa-wj-9hg" id="EJp-Yf-elH"/>
+                        <outlet property="iphoneImageView" destination="8So-j5-SFc" id="JlC-1g-blb"/>
+                        <outlet property="subsButton" destination="ign-J7-Fmb" id="miQ-wx-BY1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qYM-Bb-jgJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1912" y="357"/>
+            <point key="canvasLocation" x="2003" y="329"/>
         </scene>
     </scenes>
     <resources>
+        <image name="apple-watch.png" width="260" height="467"/>
+        <image name="eYoga-icon.png" width="76" height="76"/>
+        <image name="ipad.png" width="750" height="534"/>
+        <image name="iphone.png" width="397" height="812"/>
         <image name="macbook.jpg" width="5184" height="3456"/>
+        <image name="subs-icon.png" width="76" height="76"/>
     </resources>
 </document>
