--- a/WWDC15/TimelineStoryboard.storyboard
+++ b/WWDC15/TimelineStoryboard.storyboard
@@ -233,8 +233,7 @@ I traveled to WWDC unaccompanied, and it was a total breakthrough in my develope
                             <subviews>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfc-wd-luu">
                                     <rect key="frame" x="40" y="40" width="388" height="344"/>
-                                    <string key="text">
-I was super excited abut the Apple Watch when it was unveiled in September 2014, and I started to play around with WatchKit the same day it was released to developers. </string>
+                                    <string key="text">As I mentioned before, I spent a lot of time in late 2014 and 2015 researching the possiblites of Apple Watch in the field of education. I can't wait to meet specialitsts at WWDC who can answer me questions. In additon, I'm extraordinary excited about the future of WatchKit and I'm looking forward to the new capabilities that hopefully will be announced during WWDC.</string>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="18"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
